--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,3 +5,4 @@ interpreter_python=auto_silent
 localhost_warning=false
 deprecation_warnings = False
 log_path=/home/ec2-user/ansible-dev/ansible.log 
+roles_path=/home/ec2-user/ansible-dev/roles
